--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@line/bot-sdk": "^9.4.0",
+    "better-sqlite3": "^11.8.1",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
     "nodemon": "^3.1.6"
