--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon --exec node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,9 @@
   "description": "",
   "dependencies": {
     "@line/bot-sdk": "^9.4.0",
-    "better-sqlite3": "^11.8.1",
+    "@line/liff": "^2.25.1",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
     "fs": "^0.0.1-security",
     "nodemon": "^3.1.6"
   }
